--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../Russian-travel/pages/index.css" rel="stylesheet">
+    <link href="../Russian-travel/fonts/inter/font.css" rel="stylesheet">
     <title>Russian-travel</title>
 </head>
 <body class="page">
-    <header>
-
+    <header class="header">
+      <img class="header__header-logo" src="./images/header-logo.svg">
+      <div class="header__lang-link">
+        <a class="header__lang-link header__lang-link_language_ru" href="#">Ru</a>
+        <a class="header__lang-link header__lang-link_language_en" href="#">En</a>
+      </div>
     </header>
-    <main>
-
+    <main class="main">
+      
     </main>
-    <footer>
+    <footer class="footer">
 
     </footer>
 </body>
