--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
         <a class="header__lang-link header__lang-link_language_en" href="#">En</a>
       </div>
     </header>
-    <main class="main">
-      
+    <main class="content">
+      <section class="lead">
+        <h1 class="lead__title">Путешествия по России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <figure class="lead__figure">
+          <img src="../Russian-travel/images/lead-polka.jpg" alt="Дорожная карта на фоне плацкарта" class="lead__image">
+          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        </figure>
+      </section>
     </main>
     <footer class="footer">
 
