Ready section Photo-grid

--- a/index.html
+++ b/index.html
@@ -35,6 +35,31 @@
           <li>Аэропортов 241</li>
         </ul>
       </section>
+      <section class="photo-grid">
+        <ul class="photo-grid__items">
+          <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна купе"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на гору"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на стоге сена в поле"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Вид на горные ёлки в густом тумане"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Колесо автомобиля на льду"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Берег озера Байкал"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Вид на гору Эльбрус"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Знак перехода на фоне бетонных волнорезов"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Вид на Камчатку"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на гору Камчатки"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Вид на горы возле Байкала"></li>
+          <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Вид на гору Ергаки в тумане"></li>
+        </ul>
+      </section>
+      <section class="places">
+        <ul>
+          <li class="place"></li>
+          <li class="place"></li>
+          <li class="place"></li>
+          <li class="place"></li>
+          <li class="place"></li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
 
