--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../Russian-travel/pages/index.css" rel="stylesheet">
-    <link href="../Russian-travel/fonts/inter/font.css" rel="stylesheet">
     <title>Russian-travel</title>
 </head>
 <body class="page">
@@ -147,7 +146,14 @@
       </section>
     </main>
     <footer class="footer">
-
+      <ul class="footer__links">
+        <li><a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a></li>
+        <li><a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a></li>
+        <li><a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a></li>
+        <li><a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a></li>
+        <li><a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a></li>
+      </ul>
+      <p class="footer__copyrite">&copy; 2020. Дмитрий Петров</p>
     </footer>
 </body>
 </html>
