--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li>Аэропортов 241</li>
         </ul>
       </section>
-      <!-- <section class="photo-grid">
+      <section class="photo-grid">
         <ul class="photo-grid__items">
           <li><img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна купе"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на гору"></li>
@@ -49,7 +49,7 @@
           <li><img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Вид на горы возле Байкала"></li>
           <li><img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Вид на гору Ергаки в тумане"></li>
         </ul>
-      </section> -->
+      </section>
       <section class="places">
         <ul class="places__items">
           <li class="place">
@@ -153,7 +153,7 @@
         <li><a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a></li>
         <li><a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a></li>
       </ul>
-      <p class="footer__copyrite">&copy; 2020. Дмитрий</p>
+      <p class="footer__copyrite">&copy; 2023. Дмитрий Петров</p>
     </footer>
 </body>
 </html>
