--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body class="page">
     <header class="header">
       <img class="header__header-logo" src="./images/header-logo.svg">
-      <div class="header__lang-link">
-        <a class="header__lang-link header__lang-link_language_ru" href="#">Ru</a>
-        <a class="header__lang-link header__lang-link_language_en" href="#">En</a>
+      <div class="language">
+        <a class="language__lang-link language__lang-link_active" href="#">Ru</a>
+        <a class="language__lang-link" href="#">En</a>
       </div>
     </header>
     <main class="content">
