--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__figure">
-          <img src="../Russian-travel/images/lead-polka.jpg" alt="Дорожная карта на фоне плацкарта" class="lead__image">
+          <img src="./images/lead-polka.jpg" alt="Дорожная карта на фоне плацкарта" class="lead__image">
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
