Refactor for auto-test 2

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./pages/index.css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./pages/index.css" rel="stylesheet">
     <title>Russian-travel</title>
   </head>
   <body class="page">
     <header class="header">
-      <img class="header__header-logo" src="./images/header-logo.svg" />
+      <img class="header__header-logo" src="./images/header-logo.svg" alt="Лого ввиде карты России с надписью Россия">
       <div class="language">
         <a class="language__lang-link language__lang-link_active" href="#"
           >Ru</a
@@ -26,8 +26,7 @@
           <img
             src="./images/lead-polka.jpg"
             alt="Дорожная карта на фоне плацкарта"
-            class="lead__image"
-          />
+            class="lead__image">
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
@@ -58,85 +57,73 @@
             <img
               class="photo-grid__item"
               src="./images/photo-grid-train.jpg"
-              alt="Вид из окна купе"
-            />
+              alt="Вид из окна купе">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-atharva-tulsi.jpg"
-              alt="Вид на гору"
-            />
+              alt="Вид на гору">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-tuman.jpg"
-              alt="Собака на стоге сена в поле"
-            />
+              alt="Собака на стоге сена в поле">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-sochi.jpg"
-              alt="Вид на горные ёлки в густом тумане"
-            />
+              alt="Вид на горные ёлки в густом тумане">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-arisa.jpg"
-              alt="Колесо автомобиля на льду"
-            />
+              alt="Колесо автомобиля на льду">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-baikal.jpg"
-              alt="Берег озера Байкал"
-            />
+              alt="Берег озера Байкал">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-elbrus.jpg"
-              alt="Вид на гору Эльбрус"
-            />
+              alt="Вид на гору Эльбрус">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-kondratiev.jpg"
-              alt="Знак перехода на фоне бетонных волнорезов"
-            />
+              alt="Знак перехода на фоне бетонных волнорезов">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-kamchatka-1.jpg"
-              alt="Вид на Камчатку"
-            />
+              alt="Вид на Камчатку">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-kamchatka-2.jpg"
-              alt="Вид на гору Камчатки"
-            />
+              alt="Вид на гору Камчатки">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-baikal-2.jpg"
-              alt="Вид на горы возле Байкала"
-            />
+              alt="Вид на горы возле Байкала">
           </li>
           <li>
             <img
               class="photo-grid__item"
               src="./images/photo-grid-ergaki.jpg"
-              alt="Вид на гору Ергаки в тумане"
-            />
+              alt="Вид на гору Ергаки в тумане">
           </li>
         </ul>
       </section>
@@ -159,8 +146,7 @@
               <img
                 src="./images/place-kosa.jpg"
                 alt="Каменный берег моря с мощными пнями"
-                class="place__image"
-              />
+                class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
@@ -196,8 +182,7 @@
               <img
                 src="./images/place-kolsky.jpg"
                 alt="Заснеженная гора"
-                class="place__image"
-              />
+                class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Почти весь полуостров находится за Полярным кругом. Саамская
@@ -233,8 +218,7 @@
               <img
                 src="./images/place-altai.jpg"
                 alt="Ноутбук на деревянном столе на фоне леса"
-                class="place__image"
-              />
+                class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Алтай — одно из красивейших мест в России. В первую очередь
@@ -270,8 +254,7 @@
               <img
                 src="./images/place-winter-baikal.jpg"
                 alt="Треснутый прозрачный лёд"
-                class="place__image"
-              />
+                class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -306,8 +289,7 @@
               <img
                 src="./images/place-karelia.jpg"
                 alt="Река протекающая вдоль леса"
-                class="place__image"
-              />
+                class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Сибирь заканчивается не на Урале, а в Карелии: образующая
@@ -343,8 +325,7 @@
       <ul class="footer__links">
         <li>
           <a class="footer__link" target="_blank" href="https://yandex.ru/maps"
-            >Карты</a
-          >
+            >Карты</a>
         </li>
         <li>
           <a
