--- a/index.html
+++ b/index.html
@@ -1,152 +1,107 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./pages/index.css" rel="stylesheet">
-    <title>Russian-travel</title>
-  </head>
-  <body class="page">
-    <header class="header">
-      <img class="header__header-logo" src="./images/header-logo.svg" alt="Лого ввиде карты России с надписью Россия">
-      <div class="language">
-        <a class="language__lang-link language__lang-link_active" href="#"
-          >Ru</a
-        >
-        <a class="language__lang-link" href="#">En</a>
-      </div>
-    </header>
-    <main class="content">
-      <section class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">
-          Настоящая страна не в выпусках новостей, а здесь.
-        </p>
-        <figure class="lead__figure">
-          <img
-            src="./images/lead-polka.jpg"
-            alt="Дорожная карта на фоне плацкарта"
-            class="lead__image">
-          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
-        </figure>
-      </section>
-      <section class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">
-          По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
-          36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома,
-          не видели? На самом деле, Россия — это целая вселенная с ласковым
-          морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
-          увидеть все эти красоты можно без миллионов на счету, загранпаспорта и
-          многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
-          мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и
-          проехала 20 тысяч километров по родной стране. Мы выбрали и описали
-          некоторые интересные места, достойные вашего отпуска.
-        </p>
-        <ul class="intro__list">
-          <li>Часовых поясов 11</li>
-          <li>Объектов природного наследия ЮНЕСКО 12</li>
-          <li>Объектов культурного наследия ЮНЕСКО 16</li>
-          <li>Природных заповедников 105</li>
-          <li>Аэропортов 241</li>
-        </ul>
-      </section>
-      <section class="photo-grid">
-        <ul class="photo-grid__items">
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-train.jpg"
-              alt="Вид из окна купе">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-atharva-tulsi.jpg"
-              alt="Вид на гору">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-tuman.jpg"
-              alt="Собака на стоге сена в поле">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-sochi.jpg"
-              alt="Вид на горные ёлки в густом тумане">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-arisa.jpg"
-              alt="Колесо автомобиля на льду">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-baikal.jpg"
-              alt="Берег озера Байкал">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-elbrus.jpg"
-              alt="Вид на гору Эльбрус">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-kondratiev.jpg"
-              alt="Знак перехода на фоне бетонных волнорезов">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-kamchatka-1.jpg"
-              alt="Вид на Камчатку">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-kamchatka-2.jpg"
-              alt="Вид на гору Камчатки">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-baikal-2.jpg"
-              alt="Вид на горы возле Байкала">
-          </li>
-          <li>
-            <img
-              class="photo-grid__item"
-              src="./images/photo-grid-ergaki.jpg"
-              alt="Вид на гору Ергаки в тумане">
-          </li>
-        </ul>
-      </section>
-      <section class="places">
-        <ul class="places__items">
-          <li class="place">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./pages/index.css" rel="stylesheet">
+  <title>Russian-travel</title>
+</head>
+
+<body class="page">
+  <header class="header">
+    <img class="header__header-logo" src="./images/header-logo.svg" alt="Лого ввиде карты России с надписью Россия">
+    <div class="language">
+      <a class="language__lang-link language__lang-link_active" href="#">Ru</a>
+      <a class="language__lang-link" href="#">En</a>
+    </div>
+  </header>
+  <main class="content">
+    <section class="lead">
+      <h1 class="lead__title">Путешествия по России</h1>
+      <p class="lead__subtitle">
+        Настоящая страна не в выпусках новостей, а здесь.
+      </p>
+      <figure class="lead__figure">
+        <img src="./images/lead-polka.jpg" alt="Дорожная карта на фоне плацкарта" class="lead__image">
+        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+      </figure>
+    </section>
+    <section class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">
+        По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
+        36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома,
+        не видели? На самом деле, Россия — это целая вселенная с ласковым
+        морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё
+        увидеть все эти красоты можно без миллионов на счету, загранпаспорта и
+        многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
+        мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и
+        проехала 20 тысяч километров по родной стране. Мы выбрали и описали
+        некоторые интересные места, достойные вашего отпуска.
+      </p>
+      <ul class="intro__list">
+        <li><span class="intro-list-phrase">Часовых поясов</span> 11</li>
+        <li><span class="intro-list-phrase">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li><span class="intro-list-phrase">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li><span class="intro-list-phrase">Природных заповедников</span> 105</li>
+        <li><span class="intro-list-phrase">Аэропортов</span> 241</li>
+      </ul>
+    </section>
+    <section class="photo-grid">
+      <ul class="photo-grid__items">
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна купе">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Вид на гору">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Собака на стоге сена в поле">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Вид на горные ёлки в густом тумане">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Колесо автомобиля на льду">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Берег озера Байкал">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Вид на гору Эльбрус">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg"
+            alt="Знак перехода на фоне бетонных волнорезов">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Вид на Камчатку">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Вид на гору Камчатки">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Вид на горы возле Байкала">
+        </li>
+        <li>
+          <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Вид на гору Ергаки в тумане">
+        </li>
+      </ul>
+    </section>
+    <section class="places">
+      <ul class="places__items">
+        <li>
+          <article class="place">
             <div class="place__upper-row">
               <h2 class="place__title">Куршская коса</h2>
-              <div class="website">
-                <h3 class="website__url-heading">URL</h3>
-                <a
-                  class="website__link"
-                  href="http://park-kosa.ru"
-                  target="_blank"
-                  >park-kosa.ru</a
-                >
+              <div class="place__website">
+                <h3 class="place__url-heading">URL</h3>
+                <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
               </div>
             </div>
             <div class="place__lower-row">
-              <img
-                src="./images/place-kosa.jpg"
-                alt="Каменный берег моря с мощными пнями"
-                class="place__image">
+              <img src="./images/place-kosa.jpg" alt="Каменный берег моря с мощными пнями" class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
@@ -164,25 +119,20 @@
                 </p>
               </div>
             </div>
-          </li>
-          <li class="place">
+          </article>
+        </li>
+        <li>
+          <article class="place">
             <div class="place__upper-row">
               <h2 class="place__title">Кольский</h2>
-              <div class="website">
-                <h3 class="website__url-heading">URL</h3>
-                <a
-                  class="website__link"
-                  href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-                  target="_blank"
-                  >National Geographic</a
-                >
+              <div class="place__website">
+                <h3 class="place__url-heading">URL</h3>
+                <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                  target="_blank">National Geographic</a>
               </div>
             </div>
             <div class="place__lower-row">
-              <img
-                src="./images/place-kolsky.jpg"
-                alt="Заснеженная гора"
-                class="place__image">
+              <img src="./images/place-kolsky.jpg" alt="Заснеженная гора" class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Почти весь полуостров находится за Полярным кругом. Саамская
@@ -200,25 +150,19 @@
                 </p>
               </div>
             </div>
-          </li>
-          <li class="place">
+          </article>
+        </li>
+        <li>
+          <article class="place">
             <div class="place__upper-row">
               <h2 class="place__title">Алтай</h2>
-              <div class="website">
-                <h3 class="website__url-heading">URL</h3>
-                <a
-                  class="website__link"
-                  href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ"
-                  target="_blank"
-                  >YouTube</a
-                >
+              <div class="place__website">
+                <h3 class="place__url-heading">URL</h3>
+                <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
               </div>
             </div>
             <div class="place__lower-row">
-              <img
-                src="./images/place-altai.jpg"
-                alt="Ноутбук на деревянном столе на фоне леса"
-                class="place__image">
+              <img src="./images/place-altai.jpg" alt="Ноутбук на деревянном столе на фоне леса" class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Алтай — одно из красивейших мест в России. В первую очередь
@@ -236,25 +180,19 @@
                 </p>
               </div>
             </div>
-          </li>
-          <li class="place">
+          </article>
+        </li>
+        <li>
+          <article class="place">
             <div class="place__upper-row">
               <h2 class="place__title">Зимний Байкал</h2>
-              <div class="website">
-                <h3 class="website__url-heading">URL</h3>
-                <a
-                  class="website__link"
-                  href="https://vk.com/baikalmile"
-                  target="_blank"
-                  >https://vk.com/baikalmile</a
-                >
+              <div class="place__website">
+                <h3 class="place__url-heading">URL</h3>
+                <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
               </div>
             </div>
             <div class="place__lower-row">
-              <img
-                src="./images/place-winter-baikal.jpg"
-                alt="Треснутый прозрачный лёд"
-                class="place__image">
+              <img src="./images/place-winter-baikal.jpg" alt="Треснутый прозрачный лёд" class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -271,25 +209,19 @@
                 </p>
               </div>
             </div>
-          </li>
-          <li class="place">
+          </article>
+        </li>
+        <li>
+          <article class="place">
             <div class="place__upper-row">
               <h2 class="place__title">Карелия</h2>
-              <div class="website">
-                <h3 class="website__url-heading">URL</h3>
-                <a
-                  class="website__link"
-                  href="http://vodlozero.ru"
-                  target="_blank"
-                  >http://vodlozero.ru/</a
-                >
+              <div class="place__website">
+                <h3 class="place__url-heading">URL</h3>
+                <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
               </div>
             </div>
             <div class="place__lower-row">
-              <img
-                src="./images/place-karelia.jpg"
-                alt="Река протекающая вдоль леса"
-                class="place__image">
+              <img src="./images/place-karelia.jpg" alt="Река протекающая вдоль леса" class="place__image">
               <div class="place__paragraph-pos">
                 <p class="place__paragraph">
                   Сибирь заканчивается не на Урале, а в Карелии: образующая
@@ -305,59 +237,42 @@
                 </p>
               </div>
             </div>
-          </li>
-        </ul>
-      </section>
-      <section class="cover">
-        <a
-          class="cover__link"
-          href="https://stampsy.com/na-elektrichkakh-do-baikala"
-          target="_blank"
-        ></a>
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">
-          По мотивам учебной темы о Транссибе — путешествие от столицы до
-          Байкала на электричках.
-        </p>
-      </section>
-    </main>
-    <footer class="footer">
-      <ul class="footer__links">
-        <li>
-          <a class="footer__link" target="_blank" href="https://yandex.ru/maps"
-            >Карты</a>
-        </li>
-        <li>
-          <a
-            class="footer__link"
-            target="_blank"
-            href="https://yandex.ru/pogoda"
-            >Погода</a
-          >
-        </li>
-        <li>
-          <a class="footer__link" target="_blank" href="https://rasp.yandex.ru"
-            >Расписание</a
-          >
-        </li>
-        <li>
-          <a
-            class="footer__link"
-            target="_blank"
-            href="https://calendar.yandex.ru"
-            >Календарь</a
-          >
-        </li>
-        <li>
-          <a
-            class="footer__link"
-            target="_blank"
-            href="https://travel.yandex.ru"
-            >Путешествия</a
-          >
+          </article>
         </li>
       </ul>
-      <p class="footer__copyrite">&copy; 2023. Дмитрий Петров</p>
-    </footer>
-  </body>
+    </section>
+    <section class="cover">
+      <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <p class="cover__subtitle">
+        По мотивам учебной темы о Транссибе — путешествие от столицы до
+        Байкала на электричках.
+      </p>
+      </a>
+    </section>
+  </main>
+  <footer class="footer">
+    <nav>
+      <ul class="footer__links">
+        <li>
+          <a class="footer__link" target="_blank" href="https://yandex.ru/maps">Карты</a>
+        </li>
+        <li>
+          <a class="footer__link" target="_blank" href="https://yandex.ru/pogoda">Погода</a>
+        </li>
+        <li>
+          <a class="footer__link" target="_blank" href="https://rasp.yandex.ru">Расписание</a>
+        </li>
+        <li>
+          <a class="footer__link" target="_blank" href="https://calendar.yandex.ru">Календарь</a>
+        </li>
+        <li>
+          <a class="footer__link" target="_blank" href="https://travel.yandex.ru">Путешествия</a>
+        </li>
+      </ul>
+    </nav>
+    <p class="footer__copyrite">&copy; 2023. Дмитрий Петров</p>
+  </footer>
+</body>
+
 </html>
