--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         некоторые интересные места, достойные вашего отпуска.
       </p>
       <ul class="intro__list">
-        <li><span class="intro-list-phrase">Часовых поясов</span> 11</li>
-        <li><span class="intro-list-phrase">Объектов природного наследия ЮНЕСКО</span> 12</li>
-        <li><span class="intro-list-phrase">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-        <li><span class="intro-list-phrase">Природных заповедников</span> 105</li>
-        <li><span class="intro-list-phrase">Аэропортов</span> 241</li>
+        <li><span class="intro__list-phrase">Часовых поясов</span> 11</li>
+        <li><span class="intro__list-phrase">Объектов природного наследия ЮНЕСКО</span> 12</li>
+        <li><span class="intro__list-phrase">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+        <li><span class="intro__list-phrase">Природных заповедников</span> 105</li>
+        <li><span class="intro__list-phrase">Аэропортов</span> 241</li>
       </ul>
     </section>
     <section class="photo-grid">
